--- a/layouts/partials/analytics.html
+++ b/layouts/partials/analytics.html
@@ -1,3 +1,4 @@
+{{/* There are preconnect links in extra-head.html */}}
 <script>
     !function () {
         var analytics = window.analytics = window.analytics || []; if (!analytics.initialize) if (analytics.invoked) window.console && console.error && console.error("Segment snippet included twice."); else {
