--- a/layouts/partials/extra-head.html
+++ b/layouts/partials/extra-head.html
@@ -1,3 +1,4 @@
+<link rel="canonical" href="{{ .Permalink }}">
 <link rel="preconnect" href="https://api.segment.io">
 <link rel="preconnect" href="https://cdn.segment.com">
 <link rel="preconnect" href="https://www.google-analytics.com">
