--- a/layouts/partials/extra-head.html
+++ b/layouts/partials/extra-head.html
@@ -1,4 +1,7 @@
-<link rel="canonical" href="{{ .Permalink }}">
+<link rel="preload" href="/fonts/josefin-sans-v9-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+
 <link rel="preconnect" href="https://api.segment.io">
 <link rel="preconnect" href="https://cdn.segment.com">
 <link rel="preconnect" href="https://www.google-analytics.com">
+
+<link rel="canonical" href="{{ .Permalink }}">
