Add cache control headers

--- a/layouts/partials/extra-head.html
+++ b/layouts/partials/extra-head.html
@@ -5,3 +5,7 @@
 <link rel="preconnect" href="https://www.google-analytics.com">
 
 <link rel="canonical" href="{{ .Permalink }}">
+
+{{ $typography := resources.Get "scss/typography.scss" | resources.ExecuteAsTemplate "css/typography.css" . |  resources.ToCSS | resources.Minify | resources.Fingerprint -}}
+<link rel="stylesheet" href="{{ $typography.Permalink }}"
+    {{ printf "integrity=%q" $typography.Data.Integrity | safeHTMLAttr }} crossorigin="anonymous">
