--- a/layouts/partials/home-blurb.html
+++ b/layouts/partials/home-blurb.html
@@ -1,4 +1,4 @@
 <div class="home-blurb">
     <p>Software developer, geek and technology enthusiast</p>
-    <p>Principal Engineer at <a href="https://pollen.co">Pollen</a></p>
+    <p>Principal Engineer at <a href="https://www.optimal.ag/">Optimal Agriculture</a></p>
 </div>
