Fix auto-format error

--- a/layouts/partials/extra-head.html
+++ b/layouts/partials/extra-head.html
@@ -2,7 +2,5 @@
 
 <link rel="canonical" href="{{ .Permalink }}">
 
-{{ $typography := resources.Get "scss/typography.scss" | resources.ExecuteAsTemplate "css/typography.css" . |
-resources.ToCSS | resources.Minify | resources.Fingerprint -}}
-<link rel="stylesheet" href="{{ $typography.Permalink }}" {{ printf "integrity=%q" $typography.Data.Integrity |
-    safeHTMLAttr }} crossorigin="anonymous">
+{{ $typography := resources.Get "scss/typography.scss" | resources.ExecuteAsTemplate "css/typography.css" . | resources.ToCSS | resources.Minify | resources.Fingerprint -}}
+<link rel="stylesheet" href="{{ $typography.Permalink }}" {{ printf "integrity=%q" $typography.Data.Integrity | safeHTMLAttr }} crossorigin="anonymous">
