--- a/themes/hauru/assets/css/index.css
+++ b/themes/hauru/assets/css/index.css
@@ -45,8 +45,9 @@ body {
   background: #282828;
   color: #e2e2e5;
   font-family: 'Josefin Sans', sans-serif;
-  margin: 1rem;
+  padding: 1rem;
   min-height: 100vh;
+  min-width: 350px;
   display: flex;
   flex-direction: column;
 }
@@ -65,7 +66,7 @@ main {
 
 footer {
   font-size: 80%;
-  margin: 1rem 0 0.5rem;
+  margin: 1rem 0;
 }
 
 p {
@@ -81,4 +82,19 @@ ul {
 a {
   color: #80a0ff;
   text-decoration: none;
+}
+
+@media (min-width: 600px) {
+  html {
+    font-size: 24px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: 900px) {
+  html {
+    font-size: 28px;
+  }
 }
