--- a/themes/hauru/layouts/_default/baseof.html
+++ b/themes/hauru/layouts/_default/baseof.html
@@ -13,6 +13,8 @@
   {{ else }}
   {{ partialCached "head/css.html" . }}
   {{ end }}
+
+  <link rel="canonical" href="{{ .Permalink }}" />
 </head>
 
 <body>
