--- a/themes/hauru/layouts/partials/head/css-minimal-inline.html
+++ b/themes/hauru/layouts/partials/head/css-minimal-inline.html
@@ -1,5 +1,5 @@
 {{/*  Watch out for VSCode auto-formatting markup in the `style` tag  */}}
-{{ with resources.Get "css/index.css" | minify }}
+{{ with resources.Get "css/minimal-inline.css" | minify }}
 <style>
   {{ .Content | safeCSS }}
 </style>
