--- a/themes/hauru/assets/css/minimal-inline.css
+++ b/themes/hauru/assets/css/minimal-inline.css
@@ -1,17 +1,16 @@
 /* This file is inlined in the index page */
 @font-face {
-  font-family: 'Josefin Sans';
+  font-family: 'Montserrat';
   font-style: normal;
-  font-weight: 400;
-  src: local('Josefin Sans'), local('JosefinSans'),
-    url('fonts/josefin-sans-v9-latin-regular.woff2') format('woff2'),
-    url('fonts/josefin-sans-v9-latin-regular.woff') format('woff');
+  font-weight: 300;
+  src:
+    url('fonts/montserrat-v8.0/montserrat-wght.ttf') format('truetype-variations');
 }
 
 /* Minimal CSS reset */
 html {
   box-sizing: border-box;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 *,
@@ -44,7 +43,7 @@ ul {
 body {
   background: #282828;
   color: #e2e2e5;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   padding: 1rem;
   min-height: 90vh;
   min-width: 350px;
@@ -93,8 +92,9 @@ a {
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1200px) {
   html {
     font-size: 28px;
+    max-width: 700px;
   }
 }
