--- a/themes/hauru/assets/css/minimal-inline.css
+++ b/themes/hauru/assets/css/minimal-inline.css
@@ -4,6 +4,7 @@
   font-style: normal;
   font-weight: 300;
   src:
+    url('fonts/montserrat-v8.0/montserrat-wght.woff2') format('woff2-variations'),
     url('fonts/montserrat-v8.0/montserrat-wght.ttf') format('truetype-variations');
 }
 
