--- a/themes/hauru/assets/css/minimal-inline.css
+++ b/themes/hauru/assets/css/minimal-inline.css
@@ -3,6 +3,7 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src:
     url('fonts/montserrat-v8.0/montserrat-wght.woff2') format('woff2-variations'),
     url('fonts/montserrat-v8.0/montserrat-wght.ttf') format('truetype-variations');
